--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <span>
                             <strong>Headquarters:</strong><br>
-                            455 Fairway Dr 201, Suite 201<br>
+                            455 Fairway Dr, Suite 201<br>
                             Deerfield Beach, FL 33442
                         </span>
                     </li>
@@ -469,4 +469,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
