--- a/index.html
+++ b/index.html
@@ -352,21 +352,21 @@
                             <i class="fas fa-phone-alt"></i>
                             <div>
                                 <strong>Call Us</strong>
-                                <p>(555) 123-4567</p>
+                                <p>(954) 994-4996</p>
                             </div>
                         </div>
                         <div class="info-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <strong>Email Us</strong>
-                                <p>info@lanaprimegroup.com</p>
+                                <p>contact@lanaprimegroup.com</p>
                             </div>
                         </div>
                         <div class="info-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <strong>Location</strong>
-                                <p>Serving South Florida Tri-County Area</p>
+                                <p>Serving the entire Florida state </p>
                             </div>
                         </div>
                     </div>
@@ -471,3 +471,4 @@
 </body>
 
 </html>
+
