--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             <div class="footer-col brand-col">
                 <div class="footer-logo">LANA PRIME GROUP</div>
                 <p class="footer-tagline">
-                    Building relationships and structures with excellence. Premier General Contractor serving the South Florida Tri-County area.
+                    Building relationships and structures with excellence. Premier General Contractor serving the entire Florida state.
                 </p>
             </div>
 
@@ -471,4 +471,5 @@
 </body>
 
 </html>
+
 
