--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <strong>Location</strong>
-                                <p>Serving the entire Florida state </p>
+                                <p>455 fairway Dr, suite 201,<br> 
+                                    Deerfield Beach Florida 33441</p>
                             </div>
                         </div>
                     </div>
@@ -471,5 +472,6 @@
 </body>
 
 </html>
+
 
 
