--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     </div>
 
                     <div class="form-wrapper">
-                        <form class="quote-form" action="https://formspree.io/f/mdkqyweb" method="POST">
+                        <form class="quote-form" action="https://formspree.io/f/xdaokelj" method="POST">
     <div class="form-group">
         <label>Name</label>
         <input type="text" name="name" required>
