--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
                     <li>
     <i class="fas fa-phone-alt"></i>
     <span>
+        <strong>Office:</strong> (954) 994-4996<br>
         <strong>Naples:</strong> (239) 453-4109<br>
         <strong>Tampa:</strong> (813) 475-3157<br>
         <strong>Charlotte:</strong> (941) 254-5865<br>
